# ai-minicourses

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
mini-courses/: README.md  index.md
mini-courses/1_fundamentals/: 1_llms.md  1_llms_tr.md  2_training.md  2_training_tr.md  3_rag.md  3_rag_tr.md  4_tools.md  4_tools_tr.md  5_memory.md  5_memory_tr.md  6_agents.md  6_agents_tr.md  7_multi_agent.md  7_multi_agent_tr.md  README.md
mini-courses/2_intermediate/: 10_coding_agents.md  10_coding_agents_tr.md  11_harness_engineering.md  11_harness_engineering_tr.md  12_security.md  12_security_tr.md  13_loop_engineering.md  13_loop_engineering_tr.md  14_personal_agents.md  14_personal_agents_tr.md  8_prompt_engineering.md  8_prompt_engineering_tr.md  9_context_engineering.md  9_context_engineering_tr.md  README.md
mini-courses/3_expert/: 15_advanced_ui.md  15_advanced_ui_tr.md  16_advanced_architectures.md  16_advanced_architectures_tr.md  17_advanced_tools.md  17_advanced_tools_tr.md  18_advanced_memory.md  18_advanced_memory_tr.md  19_advanced_multiagent.md  19_advanced_multiagent_tr.md  20_advanced_prompting.md  20_advanced_prompting_tr.md  21_advanced_context_engineering.md  21_advanced_context_engineering_tr.md  22_advanced_harness_engineering.md  22_advanced_harness_engineering_tr.md  23_advanced_deployment.md  23_advanced_deployment_tr.md  README.md
mini-courses/4_ecosystem/: 24_agent_frameworks.md  24_agent_frameworks_tr.md  25_inference_providers.md  25_inference_providers_tr.md  26_inference_engines.md  README.md  (+5 more)
(+10 files in other folders)
