[project]
name = "ai-engineering-bazaar"
version = "0.1.0"
description = "AI Engineering made simple, short, and useful. — published to https://lokumai.github.io/ai-minicourses/"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
]

[tool.uv]
package = false
